--- a/template.yaml
+++ b/template.yaml
@@ -21,6 +21,7 @@ Resources:
           Properties:
             Path: /
             Method: GET
+            CodeUri: .
   One:
     Type: AWS::Serverless::Function
     Properties:
@@ -40,3 +41,4 @@ Resources:
           Properties:
             Path: /record/{key}
             Method: GET
+            CodeUri: .
