--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Outputs the time
 Resources:
   Index:
     Type: AWS::Serverless::Function
@@ -14,6 +13,9 @@ Resources:
           Properties:
             Path: /
             Method: GET
+
+# sam package --template-file template.yml --output-template-file package.yml --s3-bucket my-bucket
+# sam deploy --template-file package.yml --stack-name lambda-dynamodb --capabilities CAPABILITY_IAM
 
 #AWSTemplateFormatVersion: '2010-09-09'
 #Transform: AWS::Serverless-2016-10-31
