--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,9 @@ phases:
     commands:
       # - npm install time
       - export BUCKET=aws-lambda-dynamodb
-      - aws cloudformation package --template-file template.yaml --s3-bucket $BUCKET --output-template-file outputtemplate.yaml
+      - sam package
+      - sam deploy
+      # - aws cloudformation package --template-file template.yaml --s3-bucket $BUCKET --output-template-file outputtemplate.yaml
 artifacts:
   type: zip
   files:
