--- a/template.yaml
+++ b/template.yaml
@@ -7,6 +7,9 @@ Resources:
       Handler: index.handler
       Runtime: nodejs10.x
       CodeUri: ./
+      Environment:
+        Variables:
+          AWS_DYNAMODB_ENDPOINT: 'http://docker.for.mac.host.internal:8000'
       Events:
         GetEvent:
           Type: Api
