--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,16 @@ phases:
   build:
     commands:
       # - npm install time
-      - export BUCKET=aws-lambda-dynamodb
-      - brew tap aws/tap
-      - brew install aws-sam-cli
-      - sam package
-      - sam deploy
+      #- export BUCKET=aws-lambda-dynamodb
+      #- sh -c "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/install/master/install.sh)"
+      #- test -d ~/.linuxbrew && eval $(~/.linuxbrew/bin/brew shellenv)
+      #- test -d /home/linuxbrew/.linuxbrew && eval $(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
+      #- test -r ~/.bash_profile && echo "eval \$($(brew --prefix)/bin/brew shellenv)" >>~/.bash_profile
+      #- echo "eval \$($(brew --prefix)/bin/brew shellenv)" >>~/.profile
+      #- brew tap aws/tap
+      #- brew install aws-sam-cli
+      #- sam package
+      #- sam deploy
       # - aws cloudformation package --template-file template.yaml --s3-bucket $BUCKET --output-template-file outputtemplate.yaml
 artifacts:
   type: zip
