--- a/packaged.yaml
+++ b/packaged.yaml
@@ -6,11 +6,10 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: nodejs10.x
-      CodeUri: s3://aws-lambda-dynamodb/2101a19b8177b67445ebe00ac0e848e5
+      CodeUri: s3://aws-lambda-dynamodb/2af7f97ffb9c219a080975443fe17dd9
       Environment:
         Variables:
-          AWS_DYNAMODB_ENDPOINT: 'http://docker.for.mac.host.internal:8000'
-          AWS_REGION: 'us-west-2'
+          AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
       Events:
         GetEvent:
           Type: Api
