--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -19,7 +19,6 @@ phases:
     commands:
       # Use Install phase to install packages or any pre-reqs you may need throughout the build (e.g. dev deps, security checks, etc.)
       # - echo "[Install phase]"
-      npm install
   pre_build:
     commands:
       # Use Pre-Build phase to run tests, install any code deps or any other customization before build
@@ -30,6 +29,7 @@ phases:
       # - echo "[Build phase]"
       # We package the SAM template and create `packaged.yaml` file that will be used in our pipeline for deployment
       ## Here we separate Build from Deployment and segregate permissions for different steps
+      - npm install
       - echo "Starting SAM packaging `date` in `pwd`"
       - aws cloudformation package --template-file template.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
   post_build:
