--- a/template.yaml
+++ b/template.yaml
@@ -31,3 +31,21 @@ Resources:
             Properties:
               Path: /record/{key}
               Method: GET
+  PersonsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: "personsKey"
+          AttributeType: "S"
+        - AttributeName: "firstName"
+          AttributeType: "S"
+        - AttributeName: "lastName"
+          AttributeType: "S"
+      KeySchema:
+        - AttributeName: "personsKey"
+          KeyType: "HASH"
+        - AttributeName: "id"
+          KeyType: "RANGE"
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
