--- a/packaged.yaml
+++ b/packaged.yaml
@@ -6,7 +6,7 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: nodejs10.x
-      CodeUri: s3://aws-lambda-dynamodb/32a0d3fdbf38b497602f580ea336b2a3
+      CodeUri: s3://aws-lambda-dynamodb/65d2d40249424602a42fe8053b3df06b
       Environment:
         Variables:
           AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
@@ -21,7 +21,7 @@ Resources:
     Properties:
       Handler: one-record.handler
       Runtime: nodejs10.x
-      CodeUri: s3://aws-lambda-dynamodb/32a0d3fdbf38b497602f580ea336b2a3
+      CodeUri: s3://aws-lambda-dynamodb/65d2d40249424602a42fe8053b3df06b
       Environment:
         Variables:
           AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
@@ -31,3 +31,21 @@ Resources:
           Properties:
             Path: /record/{key}
             Method: GET
+  PersonsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+      - AttributeName: personsKey
+        AttributeType: S
+      - AttributeName: firstName
+        AttributeType: S
+      - AttributeName: lastName
+        AttributeType: S
+      KeySchema:
+      - AttributeName: personsKey
+        KeyType: HASH
+      - AttributeName: id
+        KeyType: RANGE
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
