--- a/template.yaml
+++ b/template.yaml
@@ -32,19 +32,16 @@ Resources:
               Path: /record/{key}
               Method: GET
   PersonsTable:
-    Type: "AWS::DynamoDB::Table"
-    Properties: 
-      AttributeDefinitions: 
-        - AttributeName: "personKey"
-          AttributeType: "S"
-        - AttributeName: "firstName"
-          AttributeType: "S"
-        - AttributeName: "lastName"
-          AttributeType: "S"
-          KeySchema:
-          - AttributeName: "personKey"
-            KeyType: "RANGE"
-      ProvisionedThroughput: 
-        ReadCapacityUnits: "1"
-        WriteCapacityUnits: "1"
+    Type: AWS::DynamoDB::Table
+    Properties:
       TableName: "Persons"
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
+      KeySchema:
+        - AttributeName: "personKey"
+          KeyType: "HASH"
+      AttributeDefinitions:
+        - AttributeName: "personKey"
+          AttributeType: "S"        
+      
