--- a/packaged.yaml
+++ b/packaged.yaml
@@ -6,7 +6,7 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: nodejs10.x
-      CodeUri: s3://aws-lambda-dynamodb/0117b02c1c77c68534c10be7d2f3864a
+      CodeUri: s3://aws-lambda-dynamodb/bcf11efa1c77ca99cf90f734f583f704
       Environment:
         Variables:
           AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
@@ -16,12 +16,27 @@ Resources:
           Properties:
             Path: /
             Method: GET
+  Post:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: post.handler
+      Runtime: nodejs10.x
+      CodeUri: s3://aws-lambda-dynamodb/bcf11efa1c77ca99cf90f734f583f704
+      Environment:
+        Variables:
+          AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
+      Events:
+        GetEvent:
+          Type: Api
+          Properties:
+            Path: /post
+            Method: GET
   One:
     Type: AWS::Serverless::Function
     Properties:
       Handler: one-record.handler
       Runtime: nodejs10.x
-      CodeUri: s3://aws-lambda-dynamodb/0117b02c1c77c68534c10be7d2f3864a
+      CodeUri: s3://aws-lambda-dynamodb/bcf11efa1c77ca99cf90f734f583f704
       Environment:
         Variables:
           AWS_DYNAMODB_ENDPOINT: http://docker.for.mac.host.internal:8000
